fix the code block text color in dark mode

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -25,3 +25,33 @@
 .characters-limit-exceeded {
     color: red;
 }
+
+/* Dark Mode */
+.dark .ck-content a:hover {
+    color: #7DD3FC;
+    cursor: pointer;
+}
+.dark .ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable,
+.dark .ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners {
+    background-color: #475569;
+    color: white;
+    border-radius: var(--ck-border-radius);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.dark .ck.ck-editor__editable > .ck-placeholder::before {
+    color: white;
+}
+.dark .ck-content pre {
+    padding: 1em;
+    color: #E7E5E4;
+    background: hsla(0,0%,78%,.3);
+    border: 1px solid #c4c4c4;
+    border-radius: 2px;
+    text-align: left;
+    direction: ltr;
+    tab-size: 4;
+    white-space: pre-wrap;
+    font-style: normal;
+    min-width: 200px;
+}
