--- a/public/css/missing-content-styles.css
+++ b/public/css/missing-content-styles.css
@@ -49,19 +49,3 @@
     color: #0369A1;
     cursor: pointer;
 }
-/* Dark Mode */
-.dark .ck-content a:hover {
-    color: #7DD3FC;
-    cursor: pointer;
-}
-.dark .ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable,
-.dark .ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners {
-    background-color: #475569;
-    color: white;
-    border-radius: var(--ck-border-radius);
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-.dark .ck.ck-editor__editable > .ck-placeholder::before {
-    color: white;
-}
